[tool.poetry]
name = "repopy"
version = "0.1.0"
description = ""
authors = ["Jonathan Lloyd <jonathan@thisisjonathan.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
