[tool.poetry]
name = "repopy"
version = "0.1.0"
description = "Interface (and default implementation set) for the Repository Pattern in Pytho"
authors = ["Jonathan Lloyd <jonathan@thisisjonathan.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
